[package]
name = "factorio_server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"]}
rand = "0.8.5"
futures = "0.3.31"
sysinfo = "0.32.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.9", features = ["rustls-tls", "stream", "json", "cookies"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
futures-lite = "2.5.0"
async-compression = { version = "0.4.18", features = ["tokio", "xz"] }
tokio-tar = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
scraper = "0.21.0"
dashmap = "6.1.0"
rc-zip-tokio = "4.2.3"

[dependencies.prognest]
git = "https://github.com/greaka/prognest.git"
